--- a/nova-components/NovaTheme/resources/css/theme.css
+++ b/nova-components/NovaTheme/resources/css/theme.css
@@ -1,22 +1,20 @@
 :root {
     --primary: rgb(44, 7, 94);
-    --primary-dark: rgb(209, 0, 105, 1);
-    --primary-70: rgba(254, 1, 129, 0.7);
-    --primary-50: rgba(254, 1, 129, 0.5);
-    --primary-30: rgba(254, 1, 129, 0.3);
-    --primary-10: rgba(254, 1, 129, 0.1);
+    --primary-dark: rgb(34, 32, 33);
+    --primary-70: rgb(34, 32, 32);
+    --primary-50: rgb(34, 32, 31);
+    --primary-30: rgb(34, 32, 29);
+    --primary-10: rgb(34, 32, 28);
     --logo: #430051;
-    --sidebar-icon: #db34de;
+    --sidebar-icon: #f0e7f0;
 }
 
 .bg-grad-sidebar {
-    background-image: -webkit-gradient(
-        linear,
+    background-image: -webkit-gradient(linear,
         left bottom,
         left top,
-        from(rgb(254, 1, 129, 1)),
-        to(#3c4655)
-    );
+        from(rgb(34, 32, 33)),
+        to(#86888b));
 
-    background-image: linear-gradient(0deg, rgb(254, 1, 129, 1), rgb(100, 5, 113));
+    background-image: linear-gradient(0deg, rgb(34, 32, 33), #86888b);
 }
