--- a/resources/sass/app.sass
+++ b/resources/sass/app.sass
@@ -17,10 +17,10 @@
   transform: translateY(-2px)
 
 .site-main 
-    padding-top: 4.6875rem;
+    padding-top: 4.6875rem
 
 main 
-    display: block;
+    display: block
 
 
 
